--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,6 +1,10 @@
 ---
 - name: Converge
   hosts: all
+
+  vars_files:
+    - "./vars.yml"
+
   tasks:
     - name: "Include ansible-role-samba"
       include_role:
