Document the "samba_users" variable.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,8 @@
 ---
 samba_users: []
+# samba_users:
+#   - username: john
+#     password: amazing_password
 
 samba_workgroup: []
 samba_server_string: []
