--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,6 +31,17 @@
     group: root
     mode: "0644"
 
+- name: Ensure the username map file exists.
+  template:
+    src: username_map.j2
+    dest: "{{ samba_username_map_file }}"
+    owner: root
+    group: root
+    mode: "0644"
+  when:
+    - samba_username_map_file | length > 0
+    - samba_username_map_entries | length > 0
+
 # https://stackoverflow.com/questions/44762488/non-interactive-samba-user-creation-via-ansible
 - name: Create Samba users, if they don't already exist.
   shell: >
