--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,10 +2,55 @@
 - name: Converge
   hosts: all
 
-  vars_files:
-    - "./vars.yml"
+  vars:
+    samba_workgroup: myWorkgroup
+
+    samba_users:
+      - username: testUser
+        password: foobar
+
+    samba_shares_root_directory: /mnt/shares
+
+    samba_username_map_file: /etc/samba/username_map
+    samba_username_map_entries:
+      - to: root
+        from: admin administrator
+
+    samba_hosts_allow: 192.168.1.2 192.168.1.3 192.168.1.3
+
+    samba_shares:
+      - name: myShare
+        comment: "Private Share"
+        public: "no"
+        read_only: "no"
+        group: users
+        write_list: "@users"
+
+  pre_tasks:
+    - name: Update apt cache.
+      apt:
+        upgrade: true
+        update_cache: true
+      when: ansible_distribution == "Ubuntu"
+
+    - name: Update pacman cache.
+      pacman:
+        update_cache: yes
+        upgrade: yes
+      when: ansible_os_family == "Archlinux"
 
   tasks:
+    - name: Create users
+      user:
+        name: testUser
+        append: true
+        create_home: false
+        generate_ssh_key: false
+        shell: /sbin/nologin
+        password: '!!'
+        system: true
+        expires: -1
+
     - name: "Include ansible-role-samba"
       include_role:
         name: "ansible-role-samba"
