--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,7 +6,7 @@
     samba_workgroup: myWorkgroup
 
     samba_users:
-      - username: testUser
+      - username: sambauser
         password: foobar
 
     samba_shares_root_directory: /mnt/shares
@@ -42,12 +42,10 @@
   tasks:
     - name: Create users
       user:
-        name: testUser
-        append: true
+        name: sambauser
         create_home: false
         generate_ssh_key: false
         shell: /sbin/nologin
-        password: '!!'
         system: true
         expires: -1
 
