--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
           - image: "ubuntu1804"
           - image: "centos8"
           - image: "centos7"
+          - image: "fedora35"
           - image: "fedora34"
           - image: "fedora33"
           - image: "archlinux"
