Update testing targets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,17 +13,18 @@ jobs:
     strategy:
       matrix:
         config:
+          - image: "archlinux"
           - image: "debian11"
           - image: "debian10"
           - image: "debian9"
           - image: "ubuntu2004"
           - image: "ubuntu1804"
-          - image: "centos8"
+          - image: "rockylinux8"
+          - image: "almalinux8"
+          - image: "centos-stream8"
           - image: "centos7"
           - image: "fedora35"
           - image: "fedora34"
-          - image: "fedora33"
-          - image: "archlinux"
 
     steps:
       - name: Checkout.
